--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Hello</title>
 </head>
 <body>
-   <a href="lab1/index.html">Lab 1</a>
+   <a href="public/lab1/index.html">Lab 1</a>
 </body>
 </html>
