--- a/public/lab1/home.html
+++ b/public/lab1/home.html
@@ -54,14 +54,14 @@
     </header>
     <hr>
     <nav>
-        <a href="index.html">HOME</a>
+        <a href="home.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="contact.html">CONTACT</a>
     </nav>
     <br>
 <main>
     <figure class="box">
-        <img id="profile picture" src="/public/lab1/images/brickwall.png" width="350">
+        <img src="images/brickwall.png" width="350">
     </figure>
     <div>
         <br>
