--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>Hello</title>
 </head>
 <body>
-   <a href="lab1/home.html">Lab 1</a>
+   <a href="labs/lab1/home.html">Lab 1</a>
+   <a href="projects/project1/home.html">Project 1</a>
 </body>
 </html>
