--- a/public/labs/lab1/contact.html
+++ b/public/labs/lab1/contact.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Parker Erickson</title>
-    <link href = "css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Manjari:100&display=swap" rel="stylesheet">
     <style>
+        table {
+            margin: 0 auto;
+        }
+
+        td {
+            padding-right: 10px;
+            font-size: 1.3em;
+        }
+
+        #table-head {
+            background-color: #9dede2;
+        }
+
+        .table-row {
+            background-color: #ccf0eb;
+        }
+
         header {
             font-size: 30px;
         }
+
         body {
             background-color: slategrey;
             text-align: center;
             font-family: 'Manjari', sans-serif;
             color: #e36f5b;
         }
-        main{
+
+        main {
             display: flex;
             font-family: 'Manjari', sans-serif;
             color: aliceblue;
         }
 
-        figure.box{
+        figure.box {
             -moz-box-shadow: 5px 5px 5px 5px #e36f5b;
             -webkit-box-shadow: 5px 5px 5px 5px #e36f5b;
             box-shadow: 5px 5px 5px 5px #e36f5b;
@@ -46,8 +66,22 @@
             font-size: 30px;
             color: #e36f5b;
         }
+
+        .hobby {
+            color: #91ebd4;
+        }
+
+        ul {
+            text-align: left;
+        }
+
+        #list {
+            padding-left: 12%;
+            padding-right: 12%;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Parker Erickson </h1>
@@ -59,28 +93,12 @@
         <a href="contact.html">CONTACT</a>
     </nav>
     <br>
-<main>
-    <figure class="box">
-        <img src="images/brickwall.png" width="350">
-    </figure>
-    <div>
-        <br>
-        <p id = "intro">
-            I am <strong>Parker</strong>.
-            <br>
-            <br>
-            I am a student currently studying Computer Science at CSU, Monterey Bay
-            <br>
-            <br>
-            Istrive to one day be able to make a good looking website that can showcase the work im passionate about.
-        </p>
-        <br>
-        <br>
+    <div id="googleForm">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVhgH2UAJGSI451ia0xJsA_vjx6k4_-MycDLqqsgrDNX_ALw/viewform?embedded=true" width="640" height="892" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
-</main>
-<hr>
-<footer>
-    CST336 Internet Programming. 2019 Erickson <br />
-</footer>
+    <footer>
+        CST336 Internet Programming. 2019 Erickson <br />
+    </footer>
 </body>
+
 </html>
