--- a/public/projects/project1/home.html
+++ b/public/projects/project1/home.html
@@ -33,7 +33,7 @@
 
     <div class='container'>
         <div class='box1a'>
-            <img src="https://c.wallhere.com/photos/49/1b/light_selfportrait_abstract_man_reflection_male_men_guy-663694.jpg!d" height=240px> </img>
+            <img src="https://c.wallhere.com/photos/49/1b/light_selfportrait_abstract_man_reflection_male_men_guy-663694.jpg!d" alt="man with glasses" height="240">
         </div>
 
         <div class='box2'>
@@ -46,7 +46,7 @@
                 <ul>
                     <li><strong><mark>SpaceX:</mark></strong> Developing ways to recycle space shuttles</li>
                     <li><strong><mark>Astropy:</mark></strong> Creating tools for astronomers in Python</li>
-                    <li><strong><mark>Google Sky:</mark></strong> Revolutionizing space exploration for everyday consumers</li>
+                    <li><strong><mark>Google Sky:</mark></strong> <i>Revolutionizing</i> space exploration for everyday consumers</li>
                 </ul>
             </div>
         </div>
