--- a/public/projects/project1/page1.html
+++ b/public/projects/project1/page1.html
@@ -34,7 +34,7 @@
     <div class='container'>
 
         <div class='box1'>
-            <img src="img/spacex.png" height=350px></img>
+            <img src="img/spacex.png" alt="SpaceX logo"height=350>
 
         </div>
         <div class='box2'>
