--- a/public/projects/project1/home.html
+++ b/public/projects/project1/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -38,8 +38,8 @@
 
         <div class='box2'>
             <div class='welcome'>
-            Welcome to the #1 website for observing computer science and its technological role in understanding and sharing the complexities of space. By developing various softwares, scientists and programmers alike have uncovered great potential for future galactic
-            exploration. This website focuses specifically on three major players in the field of astrological innovation.<br>
+                Welcome to the #1 website for observing computer science and its technological role in understanding and sharing the complexities of space. By developing various softwares, scientists and programmers alike have uncovered great potential for future galactic
+                exploration. This website focuses specifically on three major players in the field of astrological innovation.<br>
             </div>
 
             <div class='list'>
@@ -58,8 +58,8 @@
     <hr>
     <footer>
         <div class='footer'>
-        
-         </div>
+
+        </div>
     </footer>
 </body>
 
