--- a/public/projects/project1/page2.html
+++ b/public/projects/project1/page2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -33,7 +33,7 @@
 
     <div class='container'>
         <div class='box1'>
-            <img src="img/astropy.svg"  alt="astropy logo" height=320px>
+            <img src="img/astropy.svg" alt="astropy logo" height=320px>
         </div>
         <div class='box2'>
             Astropy is a python library meant to create the ability for Python developers to easily compute, and write programs that have a need to implement astronomy data. The entire library is community-based, and is completely developed by people with a like-mindset
