--- a/public/projects/project1/page3.html
+++ b/public/projects/project1/page3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -33,7 +33,7 @@
 
     <div class='container'>
         <div class='box1'>
-            <img src="img/google.png"  alt="google logo" height=350px>
+            <img src="img/google.png" alt="google logo" height=350px>
 
         </div>
         <div class='box2'>
