--- a/public/projects/project1/page1.html
+++ b/public/projects/project1/page1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -34,7 +34,7 @@
     <div class='container'>
 
         <div class='box1'>
-            <img src="img/spacex.png" alt="SpaceX logo"height=350>
+            <img src="img/spacex.png" alt="SpaceX logo" height=350>
 
         </div>
         <div class='box2'>
