--- a/public/projects/project1/page3.html
+++ b/public/projects/project1/page3.html
@@ -33,7 +33,7 @@
 
     <div class='container'>
         <div class='box1'>
-            <img src="img/google.png" alt="google logo" height=350px>
+            <img src="img/google.png" alt="google logo" height=350>
 
         </div>
         <div class='box2'>
